tests/script_runtime_errors/fold_bool_op_imut/error.txt
Error: 
    1 | (for event of
    2 |   case (k, v) => v
      |                  ^ The binary operation `and` is not defined for the type `integer` and `<not executed>`
    3 | into true use and end)